# jubilant-octo-disco

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml
libsrt-sys/: Cargo.toml  build.rs  wrapper.h
libsrt-sys/src/: lib.rs
server/: Cargo.toml
server/public/: existingUser.html  login.html
server/public/loginPages/: existingUser.html  newUser.html
server/public/mainPages/: account.html  devices.html  history.html  metrics.html  styles.css
server/src/: main.rs
server/src/routers/: auth.rs
temp/: Cargo.toml  README.md
