[package]
name = "temp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
enum-as-inner = "=0.5.1"
futures = "0.3.28"
srt-tokio = { git = "https://github.com/russelltg/srt-rs" }
tokio = "1.28.2"
tokio-stream = "0.1.14"
